# geometory_intersector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: IntersectionCalculation.cpp  IntersectionCalculation.h  Intersector.cpp  Intersector.h  axisalignedbox.h  line.h  obb.h  triangle.h
